<resources>
    <string name="app_name">Plexigo</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_discover">Discover</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_play_on_tv">PlayOnTvActivity</string>
    <string name="welcome_to">Welcome To,</string>
    <string name="save_password">Save Password</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="login">Login</string>
    <string name="or_connect_using">or connect using</string>
    <string name="you_don_t_have_an_account">You don’t have an account ?</string>
    <string name="register">" Register"</string>
    <string name="log_in">Log In</string>
    <string name="sign_up"> Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="already_a_member">"Already a member ?  "</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="content_forgot_password">Enter email address you used to create your account and we will mail you the verification code</string>
    <string name="action_search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="profile">Profile</string>
    <string name="all_movies">Only Movies</string>
    <string name="in_theatre">In Theaters</string>
    <string name="pvod">PVOD</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="email_mobile_no">Mobile No.</string>
    <string name="search_movie_by_name">Search Movie by name</string>
    <string name="internet_not_available">No internet available</string>
    <string name="timeout_message">Server unreachable. Try after sometime</string>

    <string name="facebook_app_id">268858933878729</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="did_not_received_the_otp">Didn\'t received the OTP?</string>
    <string name="title_continue">Continue</string>
    <string name="your_plan">Your Plan</string>
    <string name="skip">SKIP</string>
    <string name="rent_now">RENT NOW</string>
    <string name="linktoTv">Authenticate/Link TV</string>
    <string name="linktoTvMsg">Enter the authentication code you see on your TV screen</string>
    <string name="all_series">Only Series</string>
    <string name="offers">Offers</string>
    <string name="offer">Offer</string>
    <string name="live_offers">Live Offers</string>
    <string name="coupon_codes">Coupon Codes</string>
    <string name="location_rationale">Location Permission required for better experience of the app.</string>
    <string name="title_new">New</string>
    <string name="more">More</string>
    <string name="pick_for_you">Picks for you</string>
    <string name="whats_new">What\'s New</string>
    <string name="show_all">Show all</string>
    <string name="add_this_to_a_list">Add this to a list…</string>
    <string name="latest_releases">Latest Releases</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="list_you_follow">Lists you follow</string>
    <string name="faq">FAQs</string>
    <string name="coupon_code">Coupon Code :</string>
    <string name="total_amount_paid">Total amount paid</string>
    <string name="payment_date">Payment date</string>
    <string name="validated_from">Coupon validated from</string>
    <string name="expire_date">Coupon will expire on</string>
    <string name="redirection_message">See Profile Section for Plan, Do you want to see?</string>

</resources>
