<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_to"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/app_icon_login"
        app:layout_constraintStart_toStartOf="@id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <TextView
        android:id="@+id/txtLoginBackdrop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/log_in"
        android:textColor="#0FFFFFFF"
        android:textSize="80dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtLabelLogin"
        app:layout_constraintEnd_toStartOf="@id/containerLoginSignUp"
        app:layout_constraintStart_toStartOf="@id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <TextView
        android:id="@+id/txtLabelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/poppins"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/txtLoginBackdrop"
        app:layout_constraintTop_toBottomOf="@id/txtLoginBackdrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLoginSignUp"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_login_signup"
        app:layout_constraintBottom_toBottomOf="@id/txtLoginBackdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:rotation="90"
            android:text="@string/log_in"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins"
            android:rotation="90"
            android:text="|"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:rotation="90"
            android:text="@string/sign_up"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/layoutMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelLogin">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textCursorDrawable="@null"
            app:ccpDialog_allowSearch="false"
            app:ccpDialog_backgroundColor="@color/white"
            app:ccpDialog_fastScroller_bubbleColor="@color/colorAccent"
            app:ccpDialog_fastScroller_bubbleTextAppearance="@style/FastScroll"
            app:ccpDialog_fastScroller_handleColor="@color/colorPrimary"
            app:ccpDialog_searchEditTextTint="@color/primarydark"
            app:ccpDialog_showTitle="true"
            app:ccp_arrowColor="@color/primarydark"
            app:ccp_contentColor="@color/primarydark"
            app:ccp_countryPreference="IN"
            app:ccp_defaultNameCode="IN"
            app:ccp_textSize="14dp" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/countryCodePicker"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_mobile_no"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/primarydark"
            android:textColorHint="@color/textColor"
            android:textCursorDrawable="@null"
            android:textSize="14dp" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutMobile"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text_white"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:visibility="gone"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutMobile"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:padding="12dp"
            android:textColorHint="@color/textColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/save_password"
        android:textColor="@color/textColor"
        android:textSize="14dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/layoutPassword"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="7"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:text="@string/forgot_password"
        android:textColor="@color/textColor"
        android:textSize="17dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/layoutPassword"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_button_pink_round"
        android:fontFamily="@font/poppins"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/layoutMobile"
        app:layout_constraintStart_toStartOf="@id/layoutMobile"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <LinearLayout
        android:id="@+id/layoutAlternateLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login">

        <View
            android:id="@+id/view1"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtAlternateLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtAlternateLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/or_connect_using"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtAlternateLogin"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_border_white_transparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_facebook"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/registerlayout"
        app:layout_constraintEnd_toStartOf="@id/btnTwitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAlternateLogin" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_border_white_transparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_google"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnTwitter"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook" />

    <ImageButton
        android:id="@+id/btnTwitter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_border_white_transparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_twitter"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        app:layout_constraintEnd_toStartOf="@id/btnGoogle"
        app:layout_constraintStart_toEndOf="@id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook" />


    <LinearLayout
        android:id="@+id/registerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/you_don_t_have_an_account"
            android:textAllCaps="false"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>