<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/appBackground"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/forgot_password"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTop" />

    <TextView
        android:id="@+id/txtContentForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/content_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text_white"
        android:fontFamily="@font/poppins"
        android:hint="@string/email_mobile_no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:selectAllOnFocus="true" />


    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text_white"
        android:fontFamily="@font/poppins"
        android:hint="Enter Verification code"
        android:inputType="number"
        android:maxLength="8"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_code"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text_white"
        android:fontFamily="@font/poppins"
        android:hint="Enter New Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text_white"
        android:fontFamily="@font/poppins"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:layout_margin="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_primary_round"
        android:fontFamily="@font/poppins"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal" />


</LinearLayout>